[package]
name = "ssh-book"
version = "0.1.0"
description = "A SSH connection manager"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "ssh_book_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde_json = "1"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2", features = [] }
uuid = { version = "1.4", features = ["v4"] }
directories = "5.0"
thiserror = "1.0"
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"

